--- a/vignettes/CARNIVAL-vignette.Rnw
+++ b/vignettes/CARNIVAL-vignette.Rnw
@@ -427,12 +427,12 @@ res <- runCARNIVAL(measObj = tfList[[1]], netObj = netObj,
 @
 
 The solution network of this small real-case application is as shown in 
-\ref{realCase}.
+\ref{real_case}.
 
 \begin{figure*}
-\centerline{\includegraphics[width=\textwidth]{real_case.jpg}}
+\centerline{\includegraphics[width=\textwidth]{real_case}}
 \caption{Solution network of the real-case study}
-\label{fig:realCase}
+\label{fig:real_case}
 \end{figure*}
 
 \begin{thebibliography}{}
